Bug 100937 - Description: LO Freezed when I insert a very long text in the Description box
Summary: Description: LO Freezed when I insert a very long text in the Description box
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.1.3.2 release
Hardware: x86-64 (AMD64) All
: medium minor
Assignee: Matteo Casalin
URL:
Whiteboard: target:6.2.0
Keywords: bibisected, bisected, haveBacktrace, perf, regression
Depends on:
Blocks:
 
Reported: 2016-07-15 15:58 UTC by pietro.pangallo
Modified: 2023-03-16 13:01 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Callgrind with 5.3 (6.05 MB, application/x-xz)
2016-07-18 17:07 UTC, Buovjaga
Details
Example file (8.89 KB, application/vnd.oasis.opendocument.text)
2017-06-25 12:06 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pietro.pangallo 2016-07-15 15:58:34 UTC
Steps:
- Go on File>Properties>Description [tab];
- Insert: Title:"Any text" , Subject:"Any text" and Keywords:"Any text";
- Insert a very long text in the Description box;
- Press Ok;
- Go on File>Properties

Current behavior:
The Properties dialog box isn't appears and LO is Freezed.

Expected behavior:
The Properties dialog box appears.

Affected versions:

Versione: 5.1.3.2
Build ID: 644e4637d1d8544fd9f56425bd6cec110e49301b
Thread CPU: 2; Versione SO: Linux 4.1; Resa interfaccia: predefinito; 
Versione locale: it-IT (it_IT.UTF-8)
OS: openSUSE Leap 42.1 (x86_64)

Version: 5.2.0.0.beta2
Build ID: ae12e6f168ba39f137fc110174a37c482ce68fa4
CPU Threads: 2; OS Version: Linux 4.1; UI Render: default; 
Locale: it-IT (it_IT.UTF-8)
OS: openSUSE Leap 42.1 (x86_64)

Version: 5.3.0.0.alpha0+
Build ID: 54f2a4184d1296814e64cfeab1d06ae90d002357
CPU Threads: 2; OS Version: Linux 4.1; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-07-08_01:43:14
Locale: it-IT (it_IT.UTF-8); Calc: group
OS: openSUSE Leap 42.1 (x86_64)
Comment 1 Buovjaga 2016-07-18 17:07:44 UTC
Created attachment 126286 [details]
Callgrind with 5.3

Arch Linux 64-bit, KDE Plasma 5
Version: 5.3.0.0.alpha0+
Build ID: ab1b351840160655a9f0caedbb35e9fdf203c5a0
CPU Threads: 8; OS Version: Linux 4.6; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on July 16th 2016
Comment 2 Buovjaga 2016-07-18 17:08:41 UTC
It does not freeze forever. For the test I just copied your description and pasted it dozens of time.
Comment 3 mezencevrv 2016-07-23 09:51:32 UTC
I used libreoffice-fresh 5.1.4-1 in Arch Linux, KDE 5
it freeze on very long description
Comment 4 Buovjaga 2016-07-23 13:32:55 UTC
Now that I realized we all used KDE, I tested with GTK3:
SAL_USE_VCLPLUGIN=gtk3 soffice
and it does not seem to freeze for as long as with KDE.
Comment 5 Telesto 2017-06-25 12:06:50 UTC
Created attachment 134263 [details]
Example file

I can reproduce something similar on Windows

There is delay of +/-2 seconds with:
Version: 6.0.0.0.alpha0+
Build ID: cb37c5f0f3de7b545231a53d46a5271058af76ad
CPU threads: 4; OS: Windows 6.19; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-06-23_06:55:41
Locale: nl-NL (nl_NL); Calc: CL

and with
Version: 5.1.0.3
Build ID: 5e3e00a007d9b3b6efb6797a8b8e57b51ab1f737
CPU Threads: 4; OS Version: Windows 6.2; UI Render: default; 
Locale: en-US (nl_NL)

but not with
Version: 5.0.6.3
Build ID: 490fc03b25318460cfc54456516ea2519c11d1aa
Locale: en-US (nl_NL)
Comment 6 Buovjaga 2018-05-24 11:05:55 UTC
Bisected on Windows to https://cgit.freedesktop.org/libreoffice/core/commit/?id=98244c3cb47824babc746ebc14a199977e9768d1

commit 98244c3cb47824babc746ebc14a199977e9768d1 (patch)
tree 0077631b678997f61a1fae245e32467bd7afbe00
parent caa828da96b120f5a3c979237081c29f8c2f3848 (diff)
sal_uLong to sal_Int32/long
Change-Id: Ia4ae190da37351b8c2b7ee9fc953508c5b1ab062

Same blame as bug 98940

Adding Matteo to CC
Comment 7 Matteo Casalin 2018-05-27 09:17:09 UTC
Will address this.
Comment 8 Commit Notification 2018-06-03 10:19:12 UTC
Matteo Casalin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=565340d457f41197474a75ba1b036bdc3d569041

Fix tdf#100937: LO Freezed when I insert a very long text in...

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Buovjaga 2018-06-03 19:05:06 UTC
I verify the fix, thanks!

Arch Linux 64-bit
Version: 6.2.0.0.alpha0+
Build ID: da7ed9702117a5154540e2b76f41bf5efc857a4f
CPU threads: 8; OS: Linux 4.16; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group threaded
Built on June 3rd 2018