Fix tdf#100937: LO Freezed when I insert a very long text in...

... the Description box

The issue was triggered by ImpVclMEdit::Resize initially calling
TextEngine::SetMaxTextWidth() with a negative width (due to an initial
empty area, further "reduced" to take into account a vertical scroll
bar) and then with positive values in following iterations.
I preferred to consider such negative widths a no-op instead of
extending them to the "maximum" possible width.

Change-Id: I756652a30c23ebe6674e481e7d8d6e0d8ba45e75